# DT-MPC

./: README.md  design.md  pyproject.toml  requirements.txt
dt_mpc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dynamics/: __init__.py  base_system.py  dubins_car.py  safety_embedded.py
learning/: __init__.py  doc_engine.py  dt_mpc_loop.py
scripts/: run_nmpc.py  run_training.py
solvers/: __init__.py  costs.py  ocp_interface.py  optimal_control.py  test_ddp.py  tube_mpc.py
tests/: demo_ddp.py  test_costs.py  test_dubin_dynamics.py  test_dubin_trajectory.py  test_dubin_w_ddp.py  test_embedded_state.py  test_repo_structure.py
